force-app/main/default/objects/Account/fields/Storages__c.field-meta.xml
<CustomField>
    <fullName>Storages__c</fullName>
    <label>Storages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>