force-app/main/default/objects/Account/fields/TCL_s_PIC__c.field-meta.xml
<CustomField>
    <fullName>TCL_s_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCL&apos;s PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>