force-app/main/default/objects/Account/fields/TEUs_Month__c.field-meta.xml
<CustomField>
    <fullName>TEUs_Month__c</fullName>
    <label>TEUs/Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>