force-app/main/default/objects/Account/fields/TodayEqualNextInspectionDate__c.field-meta.xml
<CustomField>
    <fullName>TodayEqualNextInspectionDate__c</fullName>
    <description>Use only for folw</description>
    <formula>NextInspectionDate__c  =  TODAY()</formula>
    <label>Today = Next Inspection Date</label>
    <type>Checkbox</type>
</CustomField>