force-app/main/default/objects/Account/fields/TruckNumber__c.field-meta.xml
<CustomField>
    <fullName>TruckNumber__c</fullName>
    <label>Truck Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>