force-app/main/default/objects/Account/fields/Type_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contract__c</fullName>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>