force-app/main/default/objects/Account/fields/Type_of_Establish__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Establish__c</fullName>
    <label>Type of Establish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>JSC</fullName>
            </value>
            <value>
                <fullName>FDI</fullName>
            </value>
            <value>
                <fullName>HTX</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>