force-app/main/default/objects/Account/fields/VehicleMonitoringandManagementProces__c.field-meta.xml
<CustomField>
    <fullName>VehicleMonitoringandManagementProces__c</fullName>
    <label>Vehicle Monitoring and Management Proces</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>