force-app/main/default/objects/Account/fields/VendorType__c.field-meta.xml
<CustomField>
    <fullName>VendorType__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st (Top 5 Vendors)</fullName>
            </value>
            <value>
                <fullName>2nd (Contracted)</fullName>
            </value>
            <value>
                <fullName>3rd (Prospect)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>