force-app/main/default/objects/Account/fields/WhoPayTheFreight__c.field-meta.xml
<CustomField>
    <fullName>WhoPayTheFreight__c</fullName>
    <label>Who pay the freight?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>