force-app/main/default/objects/Account/fields/X2040DCHCDEM__c.field-meta.xml
<CustomField>
    <fullName>X2040DCHCDEM__c</fullName>
    <label>20/40DC/HC - DEM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>