force-app/main/default/objects/Account/fields/X2040DCHCDET__c.field-meta.xml
<CustomField>
    <fullName>X2040DCHCDET__c</fullName>
    <label>20/40DC/HC - DET</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>