force-app/main/default/objects/Account/fields/X2040DGCOMBINED__c.field-meta.xml
<CustomField>
    <fullName>X2040DGCOMBINED__c</fullName>
    <label>20/40DG	- COMBINED</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>