force-app/main/default/objects/Account/fields/X2040DGDET__c.field-meta.xml
<CustomField>
    <fullName>X2040DGDET__c</fullName>
    <label>20/40DG	- DET</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>