force-app/main/default/objects/Account/fields/X2040OTFRDEM__c.field-meta.xml
<CustomField>
    <fullName>X2040OTFRDEM__c</fullName>
    <label>20/40OT/FR - DEM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>