force-app/main/default/objects/Account/fields/X2040RFDET__c.field-meta.xml
<CustomField>
    <fullName>X2040RFDET__c</fullName>
    <label>20/40/RF	- DET</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>