force-app/main/default/objects/Account/recordTypes/HRAdmin.recordType-meta.xml
<RecordType>
    <fullName>HRAdmin</fullName>
    <active>true</active>
    <label>HR/Admin</label>
</RecordType>