force-app/main/default/objects/Account/validationRules/PreventupdateAccounttoOfficial.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventupdateAccounttoOfficial</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  
  OR( RecordType.Name = &apos;Customer&apos;,
     RecordType.Name = &apos;Agent&apos;),
  ISPICKVAL(Type_of_Account__c, &apos;Official&apos;) ,
  OR(
   ISBLANK(TEXT(SOA_Issue_Date__c)),
   ISBLANK(TEXT(SOA_settlement_date__c)) ,
   ISNULL(WhoPayTheFreight__c) ,
    ISPICKVAL(RequestToIssueTaxInvoice__c, &apos;False&apos;),
   ISBLANK(TEXT(Payment_Date__c)) ,
   ISBLANK(TEXT(Contract_Term__c)) 
  ) 
)</errorConditionFormula>
    <errorMessage>PLEASE INPUT ALL REQUIRED FIELDS BEFORE UPDATE ACCOUNT TO &quot;OFFICIAL&quot;</errorMessage>
</ValidationRule>