force-app/main/default/objects/Account/validationRules/PreventupdateAccounttoOfficialSupplier.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventupdateAccounttoOfficialSupplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &quot;Vendor&quot;,
TEXT(Type_of_Account__c) = &apos;Official&apos;, 
OR (
ISBLANK( NumberOfEmployees ),
ISBLANK ( NumberofOffices__c ),
ISBLANK ( Charter_capital__c ),
ISBLANK (TEXT( Company_Established_Date__c )),
ISBLANK (TEXT(  CreditTerm__c )),
ISBLANK (   CreditLimit__c ),
ISBLANK ( Routing__c )

))</errorConditionFormula>
    <errorMessage>PLEASE INPUT ALL PROSPECT INFORMATION BEFORE UPDATE ACCOUNT TO &quot;OFFICIAL&quot;</errorMessage>
</ValidationRule>