force-app/main/default/objects/Account/listViews/Customer.listView-meta.xml
<ListView>
    <fullName>Customer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountNameENG__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>TaxCode__c</columns>
    <columns>EnglishAddress__c</columns>
    <columns>Salesman__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>BusinessRelationship__c</columns>
    <columns>CreditLimit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <label>Customer</label>
</ListView>