force-app/main/default/objects/Account/listViews/HR_Admin.listView-meta.xml
<ListView>
    <fullName>HR_Admin</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountNameENG__c</columns>
    <columns>Company_Name__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>TaxCode__c</columns>
    <columns>Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HRAdmin</value>
    </filters>
    <label>HR/Admin</label>
</ListView>