force-app/main/default/objects/Account/listViews/Vendor_Blacklist.listView-meta.xml
<ListView>
    <fullName>Vendor_Blacklist</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountNameENG__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>Type_of_Account__c</columns>
    <columns>VendorType__c</columns>
    <columns>ServiceType__c</columns>
    <columns>TaxCode__c</columns>
    <columns>Company_Address__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Vendor</value>
    </filters>
    <filters>
        <field>Blacklist__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Vendor - Blacklist</label>
</ListView>